Added swager structure